# collectors-channel-scraper

./: .deepsource.toml  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  env-example.sh  flake.nix  pyproject.toml  requirements.txt  run-without-pipelines.sh  run.sh  scrapinghub.yml  scrapy.cfg  setup.py
movies_shopping_crawler/: discord.py  influxdb.py  items.py  middlewares.py  mongodb.py  settings.py  telegram.py
movies_shopping_crawler/spiders/: amazon.py  colecioneclassicos.py  famdvd.py  imusicbr.py  theoriginals.py  versatil.py  videoperola.py
scripts/: build-and-push-arm64-docker-image.sh  build-and-push-docker-image.sh  build-and-push-docker-images.sh  build-docker-hub.sh  deploy-to-shub.sh  env-example.sh  run-all-spiders.sh  run-container.sh  run-docker-image.sh  shub-dependencies.sh
